--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "^8.6.0",
     "firebase": "^9.17.1",
     "fs": "^0.0.1-security",
     "next": "13.1.6",
@@ -26,6 +28,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.2.3"
+    "@tauri-apps/cli": "^1.2.3",
+    "prettier": "2.8.4"
   }
 }
